Equicoaching en marron et gras

--- a/programme/samedi.html
+++ b/programme/samedi.html
@@ -16,7 +16,7 @@
 		<div class="flex-row">
 			<h1>Agile Tour Rennes - Samedi 23 novembre</h1>
 
-			<div class="col-12 alert alert-secondary telephone text-center" style="cursor: zoom-in" data-toggle="modal" data-target="#modal-equicoaching">
+			<div class="col-12 alert alert-secondary telephone text-center equicoaching" data-toggle="modal" data-target="#modal-equicoaching">
 				Toute la journée - Equicoaching
 			</div>
 
@@ -85,7 +85,7 @@
 
 	<div class="container-fluid">
 		<div class="flex-row">
-			<div class="col-12 alert alert-secondary ordi text-center" style="cursor: zoom-in" data-toggle="modal" data-target="#modal-equicoaching">
+			<div class="col-12 alert alert-secondary ordi text-center equicoaching" data-toggle="modal" data-target="#modal-equicoaching">
 				Toute la journée - Equicoaching
 			</div>
 		</div>
