--- a/programme/vendredi.html
+++ b/programme/vendredi.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
+	<meta name="viewport" content="initial-scale=1.0; maximum-scale=1.0" />
 	<title>Agile Tour Rennes 2019 - Programme du vendredi</title>
 
 	<link href="programmes.css" rel="stylesheet" type="text/css" media="screen">
@@ -197,7 +197,7 @@
 				</div>
 				<div class="grid-item grid-item--height3 c3 AM2 CF" style="position: absolute; left: 33.2%; top: 442px; opacity: 1; width: 16.4%;">
 					<div>
-						<div class="debut heure">10h30</div>
+						<div class="debut heure">10h35</div>
 						<div class="salle heure">O</div>
 						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-software-craftsmanship-il-est-temps-d-elever-le-niveau">
 							<div class="parent grid-item--height3">
@@ -289,7 +289,7 @@
 						<a href="#" class="portfolio-link" data-toggle="modal" data-target="#modal-reconcilier-it-marketing-ou-comment-la-fille-de-la-comm-a-rejoint-une-esn">
 							<div class="parent grid-item--height3">
 								<div class="enfant">
-									<h3>Réconcilier IT &amp; Marketing, ou comment la fille de la Comm' a rejoint un ESN</h3>
+									<h3>Réconcilier IT &amp; Marketing, ou comment la fille de la Comm' a rejoint une ESN</h3>
 									<p>Sara DUFOUR</p>
 								</div>
 							</div>
